# tc-ta3-api-bindings-cpp

./: .gitignore  .gitlab-ci.yml  Makefile.am  README.md  autogen.sh  configure.ac
ci/: schema-setup
conf/: logconfig.ini
examples/: Makefile.am  consumer_example.cc  kafka_client_demo.cc  producer_example.cc  seeking_pull_consumer_example.README  seeking_pull_consumer_example.cc
src/: Makefile.am
src/records/: Makefile.am  abstract_object_generator.cc  abstract_object_generator.h  cdm_record_generator.cc  cdm_record_generator.h  cdm_record_parser.cc  cdm_record_parser.h  cryptographic_hash_generator.cc  cryptographic_hash_generator.h  end_marker_generator.cc  end_marker_generator.h  event_generator.cc  event_generator.h  file_object_generator.cc  file_object_generator.h  host_generator.cc  host_generator.h  host_identifier_generator.cc  host_identifier_generator.h  instrumentation_source_generator.h  interface_generator.cc  interface_generator.h  ipc_object_generator.cc  ipc_object_generator.h  measurable_cdm_record_generator.cc  measurable_cdm_record_generator.h  memory_object_generator.cc  memory_object_generator.h  net_flow_object_generator.cc  net_flow_object_generator.h  optional_element_generator.h  packet_socket_object_generator.cc  packet_socket_object_generator.h  principal_generator.cc  principal_generator.h  property_generator.h  provenance_assertion_generator.cc  provenance_assertion_generator.h  provenance_tag_node_generator.cc  provenance_tag_node_generator.h  (+19 more)
src/serialization/: Makefile.am  avro_generic_deserializer.cc  avro_generic_deserializer.h  avro_generic_deserializer_fwd.h  avro_generic_deserializer_impl.h  avro_generic_file_deserializer.cc  avro_generic_file_deserializer.h  avro_generic_file_deserializer_fwd.h  avro_generic_file_deserializer_impl.h  avro_generic_file_serializer.cc  avro_generic_file_serializer.h  avro_generic_file_serializer_fwd.h  avro_generic_file_serializer_impl.h  avro_generic_serializer.cc  avro_generic_serializer.h  avro_generic_serializer_fwd.h  avro_generic_serializer_impl.h  avro_recursion_exception.h  utils.cc  utils.h
src/services/: Makefile.am  kafka_callbacks.cc  kafka_callbacks.h  kafka_client.cc  kafka_client.h  kafka_consumer.cc  kafka_consumer.h  kafka_consumer_impl.h  kafka_producer.cc  kafka_producer.h  kafka_producer_impl.h
src/util/: Makefile.am  logger.cc  logger.h  timeconvert.cc  timeconvert.h
tests/: .gitignore  record_generator_test.cc  serialization_test.cc  util_test.cc
